<resources>
    <string name="app_name">Healing Walls</string>
    <string name="main_title">Healing Walls</string>

    <string name="app_desc">Provide you with some healing live wallpapers.\nMore wallpapers are in development.</string>
    <string name="app_desc_help">help</string>

    <string name="wall_suggestion_power_saving">Power saving</string>
    <string name="wall_suggestion_phone">Phone</string>
    <string name="wall_suggestion_tablet">Tablet</string>
    <string name="wall_suggestion_portrait">Portrait</string>
    <string name="wall_suggestion_landscape">Landscape</string>

    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_mine">Mine</string>

    <string name="main_menu_settings">Settings</string>

    <string name="settings_header_general">General</string>
    <string name="settings_item_theme">Theme</string>
    <string name="settings_item_theme_key">theme_key</string>
    <string name="settings_item_theme_defaul">system</string>

    <string name="settings_item_language">Language</string>
    <string name="settings_item_language_key">language_key</string>
    <string name="settings_item_language_defaul">""</string>


    <string name="settings_header_more">More Options</string>
    <string name="settings_item_about">About</string>
    <string name="settings_item_version">App Version</string>
    <string name="settings_item_twitter">Twitter</string>
    <string name="settings_item_support">Support</string>
    <string name="settings_item_rate">Rate App</string>
    <string name="settings_item_rate_summary">If you like my Healing Walls, rate it on the Google Play Store.</string>
    <string name="settings_item_support_summary">If you like my Healing Walls, you can support me so that I can provide you with better service and develop more beautiful wallpapers for you.</string>
    <string name="settings_item_bug_report">Bug Report</string>
    <string name="settings_item_privacy">Privacy Policy</string>
    <string name="settings_item_terms">Terms &amp; Conditions</string>
    <string name="settings_item_coffee_url">https://www.buymeacoffee.com/Bethena</string>

</resources>