<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <PreferenceCategory app:title="@string/settings_header_general">
        <ListPreference
            app:defaultValue="@string/settings_item_theme_defaul"
            app:entries="@array/settings_theme"
            app:entryValues="@array/settings_theme_values"
            app:icon="@drawable/ic_round_color_lens_24"
            app:key="@string/settings_item_theme_key"
            app:title="@string/settings_item_theme"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/settings_item_language_defaul"
            app:entries="@array/settings_language"
            app:entryValues="@array/settings_language_values"
            app:icon="@drawable/ic_round_language_24"
            app:key="@string/settings_item_language_key"
            app:title="@string/settings_item_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_header_more"
        >


    </PreferenceCategory>

</PreferenceScreen>